[package]
name = "crypto-constants"
version = "0.1.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
description = "Crypto constants generated and taken from parts of the web"
edition = "2018"

[dependencies]
hex = {version = "0.4.2", optional = true}
num-bigint = { version = "0.3", default-features = false, optional = true }

[features]
default = ["std"]
std = ["hex", "num-bigint"]