[package]
authors = ["Drew Stone <drew@commonwealth.im>"]
description = "R1CS Gadgets for Curve25519"
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "curve25519-gadgets"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features = ["u64_backend", "alloc"]

[dependencies.bulletproofs]
branch = "main"
version = "2.0.0"
git = "https://github.com/edgeware-builders/bulletproofs"
default-features = false
features = ["yoloproofs"]

[dependencies.bencher]
version = "0.1.5"

[dependencies]
sp-std = { default-features = false, version = "2.0.0" }
merlin = { version = "2.0.0", default-features = false }
num-bigint = { version = "0.3", default-features = false }

rand_core = { version = "0.5", default-features = false, features = ["alloc", "getrandom"] }
rand = { version = "0.7", optional = true }

crypto-constants = { path = "../crypto-constants" }

[features]
default = ["std"]
verify = []
std = [
    "codec/std",
    "rand/std",
    "rand",
    "num-bigint/std"
]
