[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "The Webb node"
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "webb-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "3.0.0"

[[bin]]
name = "webb-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0" }

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.0.0"

# local dependencies
webb-runtime = { path = "../runtime", version = "3.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
frame-benchmarking-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-transaction-payment-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-basic-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-cli = { features = ["wasmtime"], git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-client-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-chain-spec = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-executor = { features = ["wasmtime"], git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-finality-grandpa-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-network = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-keystore = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-telemetry = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-rpc-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-service = { features = ["wasmtime"], git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-block-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-blockchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-core = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-inherents = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-timestamp = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
substrate-frame-rpc-system = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }

pallet-contracts-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }

fc-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }
fp-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }
fc-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }
fc-rpc-core = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }
fc-db = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }
fc-mapping-sync = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }

pallet-evm = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }
pallet-ethereum = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }
pallet-dynamic-fee = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }

merkle = { package = "pallet-merkle", path = "../pallets/merkle" }
merkle-rpc = { package = "pallet-merkle-rpc", path = "../pallets/merkle/rpc" }

[features]
default = []