[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "The Webb node"
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "webb-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "3.0.0"

[[bin]]
name = "webb-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0" }

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.0.0"

# local dependencies
webb-runtime = { path = "../runtime", version = "3.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-benchmarking-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-transaction-payment-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-basic-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-cli = { features = ["wasmtime"], git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-client-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-chain-spec = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-executor = { features = ["wasmtime"], git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-finality-grandpa-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-network = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-keystore = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-telemetry = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-rpc-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-service = { features = ["wasmtime"], git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sc-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-block-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-blockchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-core = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-inherents = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-timestamp = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
substrate-frame-rpc-system = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }

pallet-contracts-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }

fc-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fp-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fc-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fc-rpc-core = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fc-db = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fc-mapping-sync = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }

pallet-evm = { git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
pallet-ethereum = { git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
pallet-dynamic-fee = { git = "https://github.com/webb-tools/frontier", branch = "erup-4" }

merkle = { package = "pallet-merkle", path = "../pallets/merkle" }
merkle-rpc = { package = "pallet-merkle-rpc", path = "../pallets/merkle/rpc" }

[features]
default = []