[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "The Webb node"
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "webb-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "3.0.0"

[[bin]]
name = "webb-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0" }

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.0.0"

# local dependencies
webb-runtime = { path = "../runtime", features = ["std"] }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-cli = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-executor = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-service = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }

pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.6" }

fc-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }
fp-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }
fc-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }
fc-rpc-core = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }
fc-db = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }
fc-mapping-sync = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }

pallet-evm = { git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }
pallet-ethereum = { git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }
pallet-dynamic-fee = { git = "https://github.com/webb-tools/frontier", branch = "polkadot-v0.9.6" }

merkle = { package = "pallet-merkle", path = "../pallets/merkle" }
merkle-rpc = { package = "pallet-merkle-rpc", path = "../pallets/merkle/rpc" }

[features]
default = []