[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "webb-runtime"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[dependencies]
hex-literal = { optional = true, version = "0.3.1" }
serde = { features = ["derive"], optional = true, version = "1.0.101" }
static_assertions = "1.1.0"

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
frame-executive = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
frame-support = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
frame-system = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
frame-system-benchmarking = { default-features = false, optional = true, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-aura = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-balances = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-contracts = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-contracts-primitives = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }

pallet-dynamic-fee = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up", default-features = false }
pallet-evm = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up", default-features = false }
pallet-ethereum = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up", default-features = false }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4-up" }
pallet-evm-precompile-simple = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up", default-features = false }

pallet-grandpa = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-sudo = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-timestamp = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-api = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-block-builder = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-consensus-aura = { default-features = false, version = "0.9.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-core = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-inherents = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-offchain = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-runtime = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-session = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-std = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-transaction-pool = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-version = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }

merkle = { package = "pallet-merkle", default-features = false, path = "../pallets/merkle" }
mixer = { package = "pallet-mixer", default-features = false, path = "../pallets/mixer" }
merkle-rpc = { package = "pallet-merkle-rpc", path = "../pallets/merkle/rpc", optional = true}
webb-currencies = { default-features = false, path = "../pallets/currencies" }
webb-traits = { default-features = false, path = "../pallets/traits" }
webb-tokens = { default-features = false, path = "../pallets/tokens" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }

[features]
default = ["std", "aura"]
aura = []
runtime-benchmarks = [
    "hex-literal",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "merkle/runtime-benchmarks",
	"mixer/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

std = [
    "codec/std",
    "serde",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "pallet-grandpa/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "merkle/std",
    "merkle-rpc",
    "mixer/std",
    "webb-tokens/std",

    "fp-rpc/std",
    "pallet-dynamic-fee/std",
    "pallet-ethereum/std",
    "pallet-evm/std",
    "pallet-evm-precompile-simple/std",
]
