[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "webb-runtime"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[dependencies]
hex-literal = { optional = true, version = "0.3.1" }
serde = { features = ["derive"], optional = true, version = "1.0.101" }
static_assertions = "1.1.0"

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
frame-executive = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
frame-support = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
frame-system = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
frame-system-benchmarking = { default-features = false, optional = true, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-aura = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-balances = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-contracts = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-contracts-primitives = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }

pallet-grandpa = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-sudo = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-timestamp = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-api = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-block-builder = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-consensus-aura = { default-features = false, version = "0.9.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-core = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-inherents = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-offchain = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-runtime = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-session = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-std = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-transaction-pool = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
sp-version = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }

merkle = { package = "pallet-merkle", default-features = false, path = "../pallets/merkle" }
mixer = { package = "pallet-mixer", default-features = false, path = "../pallets/mixer" }
merkle-rpc = { package = "pallet-merkle-rpc", path = "../pallets/merkle/rpc", optional = true}
webb-currencies = { default-features = false, path = "../pallets/currencies" }
webb-traits = { default-features = false, path = "../pallets/traits" }
webb-tokens = { default-features = false, path = "../pallets/tokens" }

pallet-dynamic-fee = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up-substrate-master", default-features = false }
pallet-evm = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up-substrate-master", default-features = false }
pallet-ethereum = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up-substrate-master", default-features = false }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4-up-substrate-master" }
pallet-evm-precompile-simple = { git = "https://github.com/webb-tools/frontier", branch = "erup-4-up-substrate-master", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }

[features]
default = ["std", "aura"]
aura = []
runtime-benchmarks = [
    "hex-literal",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "merkle/runtime-benchmarks",
	"mixer/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

std = [
    "codec/std",
    "serde",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "pallet-grandpa/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "merkle/std",
    "merkle-rpc",
    "mixer/std",
    "webb-currencies/std",
    "webb-tokens/std",

    "fp-rpc/std",
    "pallet-dynamic-fee/std",
    "pallet-ethereum/std",
    "pallet-evm/std",
    "pallet-evm-precompile-simple/std",
]
