[package]
name = "mixer-cl"
version = "0.1.7"
authors = ["Commonwealth <https://github.com/hicommonwealth>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = {version = "0.2.69", features = ["serde-serialize"]}
curve25519-dalek = "3.0.0"
pallet-merkle = { path = "../pallets/merkle" }
js-sys = "0.3.46"
console_error_panic_hook = "0.1.6"

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.46"
features = [
	"Storage",
	"Window",
]

[lib]
crate-type = ["cdylib", "rlib"]