[package]
name = "mixer-cl"
version = "0.1.10"
authors = ["Commonwealth <https://github.com/hicommonwealth>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
pallet-merkle = { path = "../pallets/merkle", default-features = false }
js-sys = "0.3.46"
console_error_panic_hook = "0.1.6"
rand_core = { version = "0.5", default-features = false, features = ["alloc", "getrandom"] }

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features = ["u64_backend", "alloc"]

[dependencies.web-sys]
version = "0.3.46"
features = [
	"Storage",
	"Window",
]

[lib]
crate-type = ["cdylib", "rlib"]