[package]
name = "mixer-client"
version = "0.0.1"
authors = ["Webb <https://github.com/webb-tools>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
js-sys = "0.3.46"
console_error_panic_hook = "0.1.6"
rand = { version = "0.7", features = ["wasm-bindgen"] }
merlin = { version = "2.0.0", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3.2"

[dependencies.bulletproofs]
branch = "main"
version = "2.0.0"
git = "https://github.com/edgeware-builders/bulletproofs"
default-features = false
features = ["yoloproofs", "std"]

[dependencies.curve25519-gadgets]
rev = "4028605"
version = "2.0.0"
git = "https://github.com/webb-tools/bulletproof-gadgets"

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features = ["u64_backend", "alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dev-dependencies]
wasm-bindgen-test = "0.3.20"

