[package]
name = "webb-bridge"
version = "0.1.0"
authors = ["Drew Stone <drew@webb.tools>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-merkle = { path = "../merkle", default-features = false }
webb-tokens = { path = "../tokens", default-features = false }
webb-traits = { default-features = false, path = "../traits" }
webb-currencies = { default-features = false, path = "../currencies" }

serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-benchmarking = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features = ["u64_backend", "alloc"]

[dependencies.bencher]
version = "0.1.5"

[dev-dependencies]
sp-core = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "pallet-balances/std",
    "frame-support/std",
    "frame-system/std",
    "webb-tokens/std",
    "frame-benchmarking/std",
    "pallet-merkle/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
